# server/src/app.ts
@@ -5,6 +5,7 @@ import prisma from "./utils/prisma.client";
 // Routes
 import swaggerRouter from "./routes/swagger.router";
 import registerRouter from "./routes/register.router";
+import loginRouter from "./routes/login.router";
 
 const app = new WebSocketExpress();
 const port = 3000;
@@ -23,6 +24,7 @@ app.useHTTP("/api-docs", swaggerRouter);
 
 // User routes
 app.useHTTP("/api/register", registerRouter);
+app.useHTTP("/api/login", loginRouter);
 
 // Export app for testing
 export default app;
